--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,7 @@
     <title>2048</title>
     <link rel="stylesheet" href="css/2048.css">
     <script src="js/jquery.min.js"></script>
-    <script src="js/support2048.js"></script>
-     <script src="js/showAnimation2048.js"></script>
-    <script src="js/main2048.js"></script>
+    <script src="js/My2048.min.js"></script>
 </head>
 <body>
 <header>
