--- a/app/index.html
+++ b/app/index.html
@@ -4,13 +4,15 @@
     <title>2048</title>
     <link rel="stylesheet" href="css/2048.css">
     <script src="js/jquery.min.js"></script>
-    <script src="js/My2048.min.js"></script>
+    <script src="js/support2048.js"></script>
+    <script src="js/showAnimation2048.js"></script>
+    <script src="js/main2048.js"></script>
 </head>
 <body>
 <header>
     <h1>2048</h1>
     <a href="javascript:void(0);" id="start">New Game</a>
-    <p>score:<span id="score">0</span></p>
+    <div class="score-container"><div id="score">0</div></div>
 </header>
 <div id="grid-container">
     <div class="game-message">
