--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>2048</title>
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/2048.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/support2048.js"></script>
