--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,10 @@
 <body>
 <header>
     <h1>2048</h1>
-    <a href="javascript:void(0);" id="start">New Game</a>
+    <div class="head-wrap">
+        <a href="javascript:void(0);" id="start">New Game</a>
     <div class="score-container"><div id="score">0</div></div>
+    </div>
 </header>
 <div id="grid-container">
     <div class="game-message">
