--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,10 @@
 <head>
     <title>2048</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- build:css(.tmp) css/2048.css -->
     <link rel="stylesheet" href="css/2048.css">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/support2048.js"></script>
-    <script src="js/showAnimation2048.js"></script>
-    <script src="js/main2048.js"></script>
+    <!-- endbuild -->
+    
 </head>
 <body>
 <header>
@@ -41,5 +40,11 @@
         <div class="grid-cell" id="grid-cell-3-2"></div>
         <div class="grid-cell" id="grid-cell-3-3"></div>
 </div>
+    <!-- build:js js/main.min.js -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/support2048.js"></script>
+    <script src="js/showAnimation2048.js"></script>
+    <script src="js/main2048.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
